# ChangeLog for x11-base/xorg-x11
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.440 2005/07/22 21:00:39 spyderous Exp $

  22 Jul 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.2-r2.ebuild:
  Fileset 0.7. (#99534) Check the right return value on ttmkfdir in the ebuild
  and in the xfs init script. Otherwise, mkfontscale overwrites the
  fonts.alias files and breaks encodings including CP1251. Thanks to Alexander
  Glyzov <isee@inbox.ru>.

  21 Jul 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -xorg-x11-6.8.99.13.ebuild:
  Pull old snapshot.

  21 Jul 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.99.15.ebuild:
  Remove dlloader USE flag. dlloader is now the default upstream and we'll no
  longer support elfloader. Binary drivers are already broken for other
  reasons.

  20 Jul 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.99.15.ebuild:
  Patchset 0.1.2. Add 9500_all_6.8.99.15-dlloader-in-host-def-CVS-HEAD.patch
  to fix problems with redefining MakeDllModules in host.def.

  20 Jul 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.99.15.ebuild:
  (#61940) No need for sparc to be stuck on the old keyboard driver anymore.

*xorg-x11-6.8.99.15 (20 Jul 2005)

  20 Jul 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xorg-x11-6.8.99.15.ebuild:
  New snapshot. Pull mmx, sse and 3dnow USE flags. They're pointless, since what
  they do is cause Mesa to support them, but Mesa already does runtime checks.
  (#99534) Fix up return-code check on ttmkfdir, so we don't overwrite its files
  with mkfontscale. mkfontscale cannot correctly generate CP1251 encodings,
  among probable others. (#61940) Also, on sparc we can start using the kbd
  driver like everyone else.

  18 Jul 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -xorg-x11-6.8.99.5.ebuild, -xorg-x11-6.8.99.8.ebuild:
  Pull old development snapshots.
