@@ -1,9 +1,9 @@
-MD5 43fa3e1f26ff59d1c12ce2ecfef1bdad ChangeLog 102394
+MD5 b2cda4e184328e2363df9a69d1f51c28 ChangeLog 102547
 MD5 ac1137a20503dcb8f9ba2939a2a766f6 metadata.xml 230
 MD5 ccbbc45e7d85514383dc1a5c11036b0a xorg-x11-6.8.2-r1.ebuild 59584
-MD5 0d34340bde43aa950eb5c3cc4b31c29b xorg-x11-6.8.2-r2.ebuild 55104
+MD5 08a2e789adab5aa2f1beadceb8061ed9 xorg-x11-6.8.2-r2.ebuild 55116
 MD5 7bc0f039cb25653898a2a9a771230bb8 xorg-x11-6.8.99.14.ebuild 55506
-MD5 4871a77861ceb4cbbe3935d2093ef5ba xorg-x11-6.8.99.15.ebuild 54073
+MD5 b7d9efc72b26118dc21dd850915841db xorg-x11-6.8.99.15.ebuild 54085
 MD5 dbe3264aa4246537122c1b6f2faba70d files/digest-xorg-x11-6.8.2-r1 504
 MD5 5fda7d5ca40dfe1bc79c581fd17986f7 files/digest-xorg-x11-6.8.2-r2 503
 MD5 4e76e2ac295e1502d65a4a70cc5c4d1f files/digest-xorg-x11-6.8.99.14 516
