@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/xorg-x11-6.8.2-r2.ebuild,v 1.49 2005/07/22 21:00:39 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/xorg-x11-6.8.2-r2.ebuild,v 1.50 2005/07/26 20:18:19 spyderous Exp $
 
 # Set TDFX_RISKY to "yes" to get 16-bit, 1024x768 or higher on low-memory
 # voodoo3 cards.
@@ -968,7 +968,7 @@ build() {
 	einfo "Building xorg-x11..."
 	if use debug; then
 		chmod u+x ${S}/config/util/makeg.sh
-		FAST=1 ${S}/config/util/makeg.sh World WORLDOPTS="" \
+		FAST=1 ${S}/config/util/makeg.sh World WORLDOPTS="" MAKE="make" \
 			|| die "debug make World failed"
 	else
 		FAST=1 emake World WORLDOPTS="" MAKE="make" || die "make World failed"
